# singledispatch

./: CHANGES.rst  NEWS.rst  README.rst  file map.json  mypy.ini  pyproject.toml  setup.cfg  setup.py  test_singledispatch.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: main.yml
docs/: conf.py  index.rst
newsfragments/: +abaf87af.feature.rst
singledispatch/: __init__.py  helpers.py
