[bdist_wheel]
universal = true

[metadata]
license_files =
	LICENSE
name = singledispatch
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Backport functools.singledispatch from Python 3.4 to Python 2.6-3.3.
long_description = file:README.rst
url = https://github.com/jaraco/singledispatch
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.2
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
keywords =
	single
	dispatch
	generic
	functions
	singledispatch
    genericfunctions
    decorator
    backport

[options]
packages = find:
include_package_data = true
python_requires = >=2.6
install_requires =
	six
	ordereddict; python_version < "2.7"

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 4.6
	pytest-checkdocs >= 2.4; python_version > "3.6"
	pytest-flake8
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	#pytest-mypy; python_implementation != "PyPy" and python_version < "3.10"
	#pytest-enabler >= 1.0.1
	#pytest-mypy; \
		# workaround for jaraco/skeleton#22
	#	python_implementation != "PyPy"
	#pytest-enabler >= 1.0.1

	# local
	unittest2; python_version <= "2.7"

docs =
	# upstream
	sphinx
	jaraco.packaging >= 8.2
	rst.linker >= 1.9

	# local

[options.entry_points]
