[bdist_wheel]
universal = true

[metadata]
license_files =
	LICENSE
name = singledispatch
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Backport functools.singledispatch to older Pythons.
long_description = file:README.rst
url = https://github.com/jaraco/singledispatch
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
keywords =
	single
	dispatch
	generic
	functions
	singledispatch
	genericfunctions
	decorator
	backport

[options]
include_package_data = true
python_requires = >=3.8
install_requires =

[options.extras_require]
testing =
	# upstream
	pytest >= 6, != 8.1.*
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# tidelift
	jaraco.tidelift >= 1.4

	# local

[options.entry_points]
